<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".RegistrationActivity" >
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/registration_info_message" />
	
	    <EditText
	        android:id="@+id/registration_participant_firstname_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/registration_participant_name"
	        android:imeOptions="actionNext"
	        android:singleLine="true" />
	
	    <EditText
	        android:id="@+id/registration_participant_lastname_id"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/regitration_participant_lastname"
	        android:imeOptions="actionNext"
	        android:inputType="textPersonName"
	        android:singleLine="true" >
	    </EditText>
	
	    <EditText
	        android:id="@+id/registration_participant_comment_id"
	        android:layout_width="280dp"
	        android:layout_height="0dp"
	        android:layout_weight="0.78"
	        android:ems="10"
	        android:hint="@string/regitration_participant_comment"
	        android:imeOptions="actionNext"
	        android:inputType="textMultiLine" >
	
	    </EditText>
	
	    <Button
	        android:id="@+id/registration_participate_button_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="180dp"
	        android:text="@string/registration_participate_button" />
	
	</LinearLayout>
</ScrollView>